Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/BadAccess.out
BadAccess.java:22:22: compiler.err.non-static.cant.be.ref: kindname.variable, i
1 error
